--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.3",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "redux": "^4.0.5",
         "web-vitals": "^1.1.1"
@@ -49,6 +50,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-router-dom": "^5.1.7",
         "@typescript-eslint/parser": "^4.21.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-prettier": "^3.3.1",
