--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
         "@types/node": "^12.20.7",
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
+        "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "eslint": "^7.24.0",
         "node-sass": "^5.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-paginate": "^7.1.2",
         "react-redux": "^7.2.3",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
         "web-vitals": "^1.1.1"
     },
     "scripts": {
@@ -50,6 +53,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-paginate": "^6.2.1",
         "@types/react-router-dom": "^5.1.7",
         "@typescript-eslint/parser": "^4.21.0",
         "eslint-config-prettier": "^8.1.0",
