--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
         "web-vitals": "^1.1.1"
     },
@@ -31,7 +32,7 @@
         "eslint": "eslint .",
         "eslint:fix": "eslint . --fix --max-warnings=0",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "react-scripts test --watch",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -53,12 +54,16 @@
         ]
     },
     "devDependencies": {
+        "@types/moxios": "^0.4.10",
         "@types/react-paginate": "^6.2.1",
         "@types/react-router-dom": "^5.1.7",
+        "@types/redux-mock-store": "^1.0.2",
         "@typescript-eslint/parser": "^4.21.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-prettier": "^3.3.1",
+        "moxios": "^0.4.0",
         "prettier": "2.2.1",
+        "redux-mock-store": "^1.5.4",
         "typescript": "^4.2.4"
     }
 }
