--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "eslint:fix": "eslint . --fix --max-warnings=0",
         "build": "react-scripts build",
         "test": "react-scripts test --watch",
+        "cypress:open": "cypress open",
+        "cypress:run": "cypress run",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -54,12 +56,15 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/react-hooks": "^5.1.1",
         "@types/moxios": "^0.4.10",
         "@types/react-paginate": "^6.2.1",
         "@types/react-router-dom": "^5.1.7",
         "@types/redux-mock-store": "^1.0.2",
         "@typescript-eslint/parser": "^4.21.0",
+        "cypress": "^7.1.0",
         "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-cypress": "^2.11.2",
         "eslint-plugin-prettier": "^3.3.1",
         "moxios": "^0.4.0",
         "prettier": "2.2.1",
