--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "js_challenge_jagaad_khyati-bardolia",
+    "name": "react-hooks_e-commerce_app",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -13,7 +13,7 @@
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "eslint": "^7.24.0",
-        "node-sass": "^5.0.0",
+        "node-sass": "^9.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-paginate": "^7.1.2",
@@ -26,7 +26,7 @@
         "web-vitals": "^1.1.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts --openssl-legacy-provider start",
         "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|html)\"",
         "lint": "eslint src --ext .js,.ts,.tsx",
         "eslint": "eslint .",
